[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menu/settings_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/UI.tres" type="Theme" id=2]

[node name="settings_menu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.862745 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Label" parent="."]
margin_left = 260.0
margin_top = 30.0
margin_right = 460.0
margin_bottom = 251.0
text = "CREDITS

Fortress Terra
by Jack Anderson

Soundtrack
Terra Tactics - Vav
Secret Track - Yanagi Seigen

Additional Assets from
Vav
opengameart.org
kenney.nl
freesound.org"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="RichTextLabel" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 250.0
margin_bottom = 219.0
text = "CONTROLS
Click the relevant buttons to enter a build mode. Left click on the map to build. Right click to clear the current selection.
Press Escape to enter the Pause menu."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -17.5
margin_top = -40.0
margin_right = 17.5
margin_bottom = -21.0
text = "Close"

[node name="clear" type="Button" parent="."]
visible = false
margin_left = 25.0
margin_top = 220.0
margin_right = 125.0
margin_bottom = 239.0
text = "CLEAR SAVE DATA"

[node name="volume_controls" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 120.0
margin_right = 103.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="volume_controls"]
margin_right = 190.0
margin_bottom = 13.0
text = "MUSIC VOLUME"

[node name="music_volume" type="HSlider" parent="volume_controls"]
margin_top = 17.0
margin_right = 190.0
margin_bottom = 38.0
max_value = 1.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="volume_controls"]
margin_top = 42.0
margin_right = 190.0
margin_bottom = 55.0
text = "SOUND VOLUME"

[node name="sound_volume" type="HSlider" parent="volume_controls"]
margin_top = 59.0
margin_right = 190.0
margin_bottom = 80.0
max_value = 1.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="difficulty_controls" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 210.0
margin_right = 152.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="difficulty_controls"]
margin_right = 122.0
margin_bottom = 13.0
text = "CHALLENGES:"

[node name="invisible" type="CheckBox" parent="difficulty_controls"]
margin_top = 17.0
margin_right = 122.0
margin_bottom = 47.0
text = "Invisible Route"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="one_hit" type="CheckBox" parent="difficulty_controls"]
margin_top = 51.0
margin_right = 122.0
margin_bottom = 81.0
text = "One Hit Wonder"
